# addok-csv

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
addok_csv/: __init__.py  plugin.py
tests/: conftest.py  test_endpoints.py
