[metadata]
name = addok-csv
version = 1.0.1
description=Add CSV support to your Addok instance
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/addok/addok-csv
licence=MIT
keywords=addok, geocoding, csv, plugin

[options]
packages = find:
include_package_data = True

[options.extras_require]
test =
    addok
    falcon
    pytest
    pytest-falcon

[options.entry_points]
addok.ext =
    csv=addok_csv
